--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "instagram-copy",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "instagram-lookalike",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
