Code refactoring -> card-component emoji-component icons-library tinify public images

--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "instagram-copy",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "instagram-lookalike",
+  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
