--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "instagram-copy",
   "version": "0.1.0",
   "private": true,
+  "homepage": "instagram-lookalike",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
@@ -14,6 +15,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-scripts": "3.4.1"
   },
   "scripts": {
