--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "instagram-lookalike",
   "version": "0.1.0",
   "private": true,
+  "homepage": "instagram-lookalike",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
