--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "instagram-lookalike",
   "version": "0.1.0",
   "private": true,
+  "homepage": "instagram-lookalike",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
@@ -12,6 +13,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "gh-pages": "^3.0.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
